回答を提出します

--- a/q5/q5/index.html
+++ b/q5/q5/index.html
@@ -16,15 +16,169 @@
     <h2 class="sub--title">Q5flex,grid</h2>
     <h3 class="question--title">Q5-1 横並び・縦並び</h3>
     <!-- Q5-1回答はここから -->
+    <div class="flexbox">
+      <div class="gyou1">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+      <div class="gyou2">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+    </div>
+    <div class="flexbox">
+      <div class="gyou3">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+      <div class="gyou4">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+    </div>
     <!-- Q5-1回答はここまで -->
     <h3 class="question--title">Q5-2 折り返し</h3>
     <!-- Q5-2回答はここから -->
+    <div class="flexbox">
+      <div class="gyou5">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+        <div class="line5-1">item6</div>
+        <div class="line5-1">item7</div>
+        <div class="line5-1">item8</div>
+        <div class="line5-1">item9</div>
+        <div class="line5-1">item10</div>
+        <div class="line5-1">item11</div>
+        <div class="line5-1">item12</div>
+        <div class="line5-1">item13</div>
+        <div class="line5-1">item14</div>
+        <div class="line5-1">item15</div>
+      </div>
+      <div class="gyou6">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+        <div class="line5-1">item6</div>
+        <div class="line5-1">item7</div>
+        <div class="line5-1">item8</div>
+        <div class="line5-1">item9</div>
+        <div class="line5-1">item10</div>
+        <div class="line5-1">item11</div>
+        <div class="line5-1">item12</div>
+        <div class="line5-1">item13</div>
+        <div class="line5-1">item14</div>
+        <div class="line5-1">item15</div>
+      </div>
+      <div class="gyou7">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+        <div class="line5-1">item6</div>
+        <div class="line5-1">item7</div>
+        <div class="line5-1">item8</div>
+        <div class="line5-1">item9</div>
+        <div class="line5-1">item10</div>
+        <div class="line5-1">item11</div>
+        <div class="line5-1">item12</div>
+        <div class="line5-1">item13</div>
+        <div class="line5-1">item14</div>
+        <div class="line5-1">item15</div>
+      </div>
+    </div>
     <!-- Q5-2回答はここまで -->
     <h3 class="question--title">Q5-3 水平方向揃え</h3>
     <!-- Q5-3回答はここから -->
+    <div class="flexbox">
+      <div class="gyou8">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+      <div class="gyou9">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+      <div class="gyou10">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+      <div class="gyou11">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+      <div class="gyou12">
+        <div class="line5-1">item1</div>
+        <div class="line5-1">item2</div>
+        <div class="line5-1">item3</div>
+        <div class="line5-1">item4</div>
+        <div class="line5-1">item5</div>
+      </div>
+    </div>
     <!-- Q5-3回答はここまで -->
     <h3 class="question--title">Q5-4 グリッドレイアウト</h3>
     <!-- Q5-4回答はここから -->
+    <div class="grid-container1">
+      <div class="item-1">item1</div>
+      <div class="item-1">item2</div>
+      <div class="item-1">item3</div>
+      <div class="item-1">item4</div>
+      <div class="item-1">item5</div>
+      <div class="item-1">item6</div>
+    </div>
+    <div class="grid-container2">
+      <div class="item-1">item1</div>
+      <div class="item-1">item2</div>
+      <div class="item-1">item3</div>
+      <div class="item-1">item4</div>
+      <div class="item-1">item5</div>
+      <div class="item-1">item6</div>
+    </div>
+    <div class="grid-container3">
+      <div class="item-1">item1</div>
+      <div class="item-1">item2</div>
+      <div class="item-1">item3</div>
+      <div class="item-1">item4</div>
+      <div class="item-1">item5</div>
+      <div class="item-1">item6</div>
+    </div>
+    <div class="grid-container4">
+      <div class="item-a">item1</div>
+      <div class="item-b">item2</div>
+      <div class="item-c">item3</div>
+      <div class="item-d">item4</div>
+      <div class="item-e">item5</div>
+      <div class="item-f">item6</div>
+    </div>
     <!-- Q5-4回答はここまで -->
   </div>
 </body>
