--- a/q1/q1/index.html
+++ b/q1/q1/index.html
@@ -18,23 +18,38 @@
     <!-- Q1-1の回答はここから -->
     <!-- text-alignを使って左右中央寄せ -->
     <div class="q1--horizontality">
+      <div class="q1--soto">
+        <div class="q1--align">text-align</div>
+      </div>
     </div>
     <!-- margin -->
     <!-- marginを使って左右中央寄せ -->
     <div class="q1--horizontality">
+      <div class="q1--sotoo">
+        <div class="q1--margin">margin</div>
+      </div>
     </div>
     <!-- Q1-1の回答はここまで -->
     <h3 class="question--title">Q1-2 上下左右中央寄せ</h3>
     <!-- Q1-2の回答はここから -->
     <!-- tableを使って上下左右中央寄せ -->
     <div class="q1--perimeter">
+      <div class="q1--table">
+        <div class="q1--cell">
+          <div class="q1--cell2">table</div>
+        </div>
+      </div>
     </div>
     <!-- flexを使って上下左右中央寄せ -->
     <div class="q1--perimeter">
+      <div class="q1--flex">
+        <div class="q1--flex2">flex</div>
+      </div>
     </div>
     <!-- positionを使って上下左右中央寄せ -->
     <div class="q1--position">
       <div class="container">
+        <div class="inbox">position</div>
       </div>
     </div>
     <!-- Q1-2の回答はここまで -->
