--- a/q3/q3/index.html
+++ b/q3/q3/index.html
@@ -17,6 +17,54 @@
     <div class="table--area">
       <table class="cell--table">
         <!-- Q3回答ここから -->
+        <tr>
+          <th>中間テスト</th>
+          <th>国語</th>
+          <th>数学</th>
+          <th>英語</th>
+          <th>理科</th>
+          <th>社会</th>
+        </tr>
+        <tr class="kisu-">
+          <th>わたなべ</th>
+          <th>71</th>
+          <th>53</th>
+          <th>65</th>
+          <th>33</th>
+          <th>81</th>
+        </tr>
+        <tr class="gu-su-">
+          <th>さとう</th>
+          <th>85</th>
+          <th>78</th>
+          <th>40</th>
+          <th>89</th>
+          <th>78</th>
+        </tr>
+        <tr class="kisu-">
+          <th>たなか</th>
+          <th>92</th>
+          <th>86</th>
+          <th>87</th>
+          <th>79</th>
+          <th>92</th>
+        </tr>
+        <tr class="gu-su-">
+          <th>かとう</th>
+          <th>40</th>
+          <th>35</th>
+          <th>25</th>
+          <th>11</th>
+          <th>41</th>
+        </tr>
+        <tr class="kisu-">
+          <th>クラス平均点</th>
+          <th>72</th>
+          <th>63</th>
+          <th>54</th>
+          <th>53</th>
+          <th>73</th>
+        </tr>
         <!-- Q3回答ここまで -->
       </table>
 
