--- a/q4/q4/index.html
+++ b/q4/q4/index.html
@@ -16,6 +16,19 @@
     <h2 class="sub--title">Q4display: table,cell</h2>
     <div class="main--area">
       <!-- Q4回答はここから -->
+        <div class="flexbox">
+          <div class="gyou">
+            <div class="kotei1">固定</div>
+            <div class="kahen1">可変</div>
+            <div class="kotei2">固定</div>
+          </div>
+          <div class="gyou">
+            <div class="kahen2">可変</div>
+            <div class="kotei3">固定</div>
+            <div class="kotei4">固定</div>
+            <div class="kahen3">可変</div>
+          </div>
+        </div>
       <!-- Q4回答はここまで -->
     </div>
   </div>
